This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: [2.7] Coverity scan: Modules/linuxaudiodev.c , fd handle is not closed.
Type: Stage: resolved
Components: Extension Modules Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: cstratak, vstinner
Priority: normal Keywords: patch

Created on 2019-03-04 15:37 by cstratak, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12163 merged cstratak, 2019-03-04 15:40
Messages (3)
msg337131 - (view) Author: Charalampos Stratakis (cstratak) * Date: 2019-03-04 15:37
There are two places [0][1] in the code where NULL is returned but the fd handle is not closed.

[0] https://github.com/python/cpython/blob/2.7/Modules/linuxaudiodev.c#L129
[1] https://github.com/python/cpython/blob/2.7/Modules/linuxaudiodev.c#L133
msg337302 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-03-06 14:12
New changeset b2aefd77e1da438aed649d018d6aa504ec35eac8 by Victor Stinner (stratakis) in branch '2.7':
[2.7] bpo-36186: Fix linuxaudiodev.linux_audio_device() error handling (GH-12163)
https://github.com/python/cpython/commit/b2aefd77e1da438aed649d018d6aa504ec35eac8
msg337304 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-03-06 14:34
Thanks Charalampos Stratakis!
History
Date User Action Args
2022-04-11 14:59:12adminsetgithub: 80367
2019-03-06 14:34:00vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg337304

stage: patch review -> resolved
2019-03-06 14:12:10vstinnersetnosy: + vstinner
messages: + msg337302
2019-03-04 15:40:50cstrataksetkeywords: + patch
stage: patch review
pull_requests: + pull_request12161
2019-03-04 15:37:06cstratakcreate